--- a/src/main/resources/com/example/demo1/HomePage.fxml
+++ b/src/main/resources/com/example/demo1/HomePage.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
@@ -9,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="739.0" prefWidth="1048.0" styleClass="top-form" stylesheets="@beautiHomePage.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.HomePageController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="739.0" prefWidth="1048.0" styleClass="top-form" stylesheets="@beautiHomePage.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.HomePageController">
    <children>
       <AnchorPane fx:id="ProfileAnchor" layoutX="187.0" layoutY="39.0" prefHeight="700.0" prefWidth="861.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="187.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="39.0">
          <children>
@@ -33,11 +35,6 @@
                      </font>
                   </Label>
                   <Label fx:id="ProfileUserLastName" layoutX="614.0" layoutY="297.0" text="Label" />
-                  <ImageView fx:id="ProfileUserImage" fitHeight="150.0" fitWidth="200.0" layoutX="356.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../images/3135715.png" />
-                     </image>
-                  </ImageView>
                   <Label fx:id="ProfilePhoneNumber" layoutX="59.0" layoutY="361.0" prefHeight="45.0" prefWidth="195.0" text="PhoneNumber">
                      <font>
                         <Font size="30.0" />
@@ -56,10 +53,16 @@
                      </font>
                   </Label>
                   <Label fx:id="ProfileUserPassword" layoutX="614.0" layoutY="406.0" prefHeight="21.0" prefWidth="195.0" text="Label" />
-                  <Button fx:id="History" layoutX="433.0" layoutY="589.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="211.0" text="History" />
-                  <Button fx:id="Wallet" layoutX="139.0" layoutY="589.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="211.0" text="Wallet" />
-                  <Button fx:id="Edit" layoutX="350.0" layoutY="504.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="83.0" text="Edit" />
-               </children></AnchorPane>
+                  <Button fx:id="History" layoutX="433.0" layoutY="589.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="211.0" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="History" />
+                  <Button fx:id="Wallet" layoutX="139.0" layoutY="589.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="211.0" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="Wallet" />
+                  <Button fx:id="Edit" layoutX="350.0" layoutY="504.0" mnemonicParsing="false" onAction="#onEditClicked" prefHeight="31.0" prefWidth="83.0" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="Edit" AnchorPane.bottomAnchor="164.0" AnchorPane.leftAnchor="350.0" AnchorPane.rightAnchor="428.0" AnchorPane.topAnchor="504.0" />
+               </children>
+            </AnchorPane>
+            <ImageView fx:id="ProfileUserImage" fitHeight="150.0" fitWidth="200.0" layoutX="356.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../images/3135715.png" />
+               </image>
+            </ImageView>
          </children></AnchorPane>
       <AnchorPane layoutY="40.0" prefHeight="700.0" prefWidth="186.0" styleClass="nav-form" stylesheets="@beautiHomePage.css">
          <children>
@@ -97,16 +100,26 @@
          <children>
             <TableView fx:id="CoinInfoTable" editable="true" layoutX="167.0" layoutY="205.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="291.0" prefWidth="535.0">
               <columns>
-                <TableColumn prefWidth="108.0" styleClass="beautiHomePage.css" text="MARKET" />
-                <TableColumn prefWidth="104.0" styleClass="beautiHomePage.css" text="PRICE" />
-                  <TableColumn prefWidth="91.0" styleClass="beautiHomePage.css" text="CHANGE" />
-                  <TableColumn prefWidth="119.0" styleClass="beautiHomePage.css" text="HIGHEST PRICE" />
-                  <TableColumn prefWidth="112.0" styleClass="beautiHomePage.css" text="LOWEST PRICE" />
+                <TableColumn fx:id="TableMarketColumn" prefWidth="108.0" styleClass="beautiHomePage.css" text="MARKET" />
+                <TableColumn fx:id="TablePriceColumn" prefWidth="104.0" styleClass="beautiHomePage.css" text="PRICE" />
+                  <TableColumn fx:id="TableChangeColumn" prefWidth="91.0" styleClass="beautiHomePage.css" text="CHANGE" />
+                  <TableColumn fx:id="TableHighestPriceColumn" prefWidth="119.0" styleClass="beautiHomePage.css" text="HIGHEST PRICE" />
+                  <TableColumn fx:id="TableLowestColumn" prefWidth="112.0" styleClass="beautiHomePage.css" text="LOWEST PRICE" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                </columnResizePolicy>
             </TableView>
+            <Label layoutX="301.0" layoutY="132.0" text="Please Select the currency you want to check" />
+            <MenuButton layoutX="377.0" layoutY="158.0" mnemonicParsing="false" popupSide="TOP" style="-fx-background-color: linear-gradient(to top right, #528560, #70f026);" text="CURRENCIES">
+              <items>
+                <MenuItem fx:id="Euro" mnemonicParsing="false" onAction="#OnMenuButtonEuroClicked" text="Euro" />
+                <MenuItem fx:id="Usd" mnemonicParsing="false" onAction="#OnMenuButtonUsdClicked" text="USD" />
+                  <MenuItem mnemonicParsing="false" onAction="#OnMenuButtonGbpClicked" text="GBP" />
+                  <MenuItem fx:id="Toman" mnemonicParsing="false" onAction="#OnMenuButtonTomanClicked" text="Toman" />
+                  <MenuItem mnemonicParsing="false" onAction="#OnMenuButtonYenClicked" text="Yen" />
+              </items>
+            </MenuButton>
          </children>
       </AnchorPane>
    </children>
