--- a/src/main/resources/com/example/demo1/SignView.fxml
+++ b/src/main/resources/com/example/demo1/SignView.fxml
@@ -103,7 +103,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <Button fx:id="SignInForgotPasswordButton" layoutX="154.0" layoutY="254.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="118.0" style="-fx-background-color: #e8e1e3;" text="Forgot Password">
+                  <Button fx:id="SignInForgotPasswordButton" layoutX="154.0" layoutY="254.0" mnemonicParsing="false" onAction="#OnForgetPassClicked" prefHeight="30.0" prefWidth="118.0" style="-fx-background-color: #e8e1e3;" text="Forgot Password">
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
