--- a/src/main/resources/com/example/demo1/TomanChart.fxml
+++ b/src/main/resources/com/example/demo1/TomanChart.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="648.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.CoinPages.TomanChartController">
-    <LineChart fx:id="lineChart" layoutX="53.0" layoutY="47.0" prefHeight="400.0" prefWidth="636.0">
+    <LineChart fx:id="lineChart" layoutX="53.0" layoutY="68.0" prefHeight="400.0" prefWidth="636.0">
         <xAxis>
             <NumberAxis label="Hours" fx:id="xAxis" />
         </xAxis>
@@ -15,7 +16,7 @@
             <NumberAxis fx:id="yAxis" label="Price" />
         </yAxis>
     </LineChart>
-    <AnchorPane layoutX="89.0" layoutY="447.0" prefHeight="101.0" prefWidth="600.0" styleClass="anchor-pane" stylesheets="@beautiHomePage.css">
+    <AnchorPane layoutX="89.0" layoutY="468.0" prefHeight="101.0" prefWidth="600.0" styleClass="anchor-pane" stylesheets="@beautiHomePage.css">
         <children>
             <Label layoutX="14.0" layoutY="14.0" text="Highest Price:" />
             <Label layoutX="14.0" layoutY="51.0" text="Lowest Price" />
@@ -31,9 +32,12 @@
     <AnchorPane layoutX="-5.0" layoutY="16.0" prefHeight="632.0" prefWidth="58.0" style="-fx-background-color: #528560;" />
     <AnchorPane layoutX="719.0" layoutY="16.0" prefHeight="632.0" prefWidth="58.0" style="-fx-background-color: #70f026;" />
     <AnchorPane layoutY="583.0" prefHeight="65.0" prefWidth="777.0" styleClass="bg-form" stylesheets="@Beauty.css" />
-    <Label layoutX="364.0" layoutY="17.0" text="Toman">
+    <Label layoutX="352.0" layoutY="9.0" text="Toman">
         <font>
             <Font size="24.0" />
         </font>
     </Label>
+   <Button fx:id="minuteChange" layoutX="191.0" layoutY="44.0" mnemonicParsing="false" onAction="#switchSitu" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="minute change" />
+   <Button fx:id="DailyChange" layoutX="352.0" layoutY="44.0" mnemonicParsing="false" onAction="#switchSitu" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="daily change" />
+   <Button fx:id="MonthluChange" layoutX="514.0" layoutY="44.0" mnemonicParsing="false" onAction="#switchSitu" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="monthly change" />
 </AnchorPane>
