--- a/src/main/resources/com/example/demo1/UsdChart.fxml
+++ b/src/main/resources/com/example/demo1/UsdChart.fxml
@@ -2,12 +2,13 @@
 
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="648.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo1.CoinPages.UsdChartController">
-    <LineChart fx:id="lineChart" layoutX="53.0" layoutY="47.0" prefHeight="400.0" prefWidth="636.0">
+    <LineChart fx:id="lineChart" layoutX="53.0" layoutY="70.0" prefHeight="400.0" prefWidth="636.0">
         <xAxis>
             <NumberAxis label="Hours" fx:id="xAxis" />
         </xAxis>
@@ -15,7 +16,7 @@
             <NumberAxis fx:id="yAxis" label="Price" />
         </yAxis>
     </LineChart>
-    <AnchorPane layoutX="89.0" layoutY="447.0" prefHeight="101.0" prefWidth="600.0" styleClass="anchor-pane" stylesheets="@beautiHomePage.css">
+    <AnchorPane layoutX="89.0" layoutY="470.0" prefHeight="101.0" prefWidth="600.0" styleClass="anchor-pane" stylesheets="@beautiHomePage.css">
         <children>
             <Label layoutX="14.0" layoutY="14.0" text="Highest Price:" />
             <Label layoutX="14.0" layoutY="51.0" text="Lowest Price" />
@@ -36,4 +37,7 @@
             <Font size="24.0" />
         </font>
     </Label>
+   <Button fx:id="minuteChange" layoutX="176.0" layoutY="52.0" mnemonicParsing="false" onAction="#switchSitu" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="minute change" />
+   <Button fx:id="DailyChange" layoutX="350.0" layoutY="52.0" mnemonicParsing="false" onAction="#switchSitu" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="daily change" />
+   <Button fx:id="MonthluChange" layoutX="544.0" layoutY="52.0" mnemonicParsing="false" onAction="#switchSitu" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="monthly change" />
 </AnchorPane>
