First Update of History Page

--- a/src/main/resources/com/example/demo1/HomePage.fxml
+++ b/src/main/resources/com/example/demo1/HomePage.fxml
@@ -53,7 +53,7 @@
                      </font>
                   </Label>
                   <Label fx:id="ProfileUserPassword" layoutX="614.0" layoutY="406.0" prefHeight="21.0" prefWidth="195.0" text="Label" />
-                  <Button fx:id="History" layoutX="475.0" layoutY="589.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="211.0" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="History" />
+                  <Button fx:id="History" layoutX="475.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="45.0" prefWidth="211.0" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="History" />
                   <Button fx:id="Wallet" layoutX="181.0" layoutY="589.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="45.0" prefWidth="211.0" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="Wallet" />
                   <Button fx:id="Edit" layoutX="392.0" layoutY="501.0" mnemonicParsing="false" onAction="#onEditClicked" prefHeight="31.0" prefWidth="83.0" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="Edit" AnchorPane.bottomAnchor="167.0" AnchorPane.leftAnchor="392.0" AnchorPane.rightAnchor="386.0" AnchorPane.topAnchor="501.0" />
                   <ImageView fx:id="ProfileUserImage" fitHeight="150.0" fitWidth="200.0" layoutX="356.0" layoutY="27.0" pickOnBounds="true" preserveRatio="true">
@@ -63,24 +63,44 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="WalletAnchor" prefHeight="700.0" prefWidth="861.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <AnchorPane fx:id="WalletAnchor" prefHeight="700.0" prefWidth="861.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label layoutX="366.0" layoutY="14.0" style="-fx-border-radius: 20px; -fx-border-color: #449e5e;" text="WALLET" textFill="WHITE">
+                  <Label layoutX="380.0" layoutY="14.0" style="-fx-border-radius: 20px; -fx-border-color: #449e5e;" text="WALLET" textFill="#0a0000">
                      <font>
                         <Font size="36.0" />
                      </font>
                   </Label>
-                  <Label layoutX="340.0" layoutY="69.0" text="Current Property">
+                  <Label layoutX="357.0" layoutY="69.0" text="Current Property">
                      <font>
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <Label fx:id="CurrentProperty" layoutX="404.0" layoutY="104.0" prefHeight="18.0" prefWidth="53.0" text="property" />
-                  <TableView fx:id="FirstCurrecnyTable" layoutX="303.0" layoutY="142.0" prefHeight="291.0" prefWidth="256.0">
+                  <Label fx:id="CurrentProperty" layoutX="429.0" layoutY="104.0" prefHeight="18.0" prefWidth="33.0" />
+                  <TableView fx:id="FirstCurrecnyTable" layoutX="317.0" layoutY="141.0" prefHeight="235.0" prefWidth="256.0">
                     <columns>
                       <TableColumn fx:id="FirstCurrecnyTableCurrency" prefWidth="75.0" text="Currency" />
                       <TableColumn fx:id="FirstCurrecnyTableUserProperty" prefWidth="110.0" text="User Property" />
                         <TableColumn fx:id="FirstCurrecnyTablePrice" prefWidth="75.0" text="Price" />
+                    </columns>
+                  </TableView>
+                  <Button fx:id="WalletPageExit" layoutX="418.0" layoutY="630.0" mnemonicParsing="false" onAction="#switchForm" styleClass="edit-button" stylesheets="@beautiHomePage.css" text="EXIT" />
+               </children>
+            </AnchorPane>
+            <AnchorPane fx:id="HistoryPage" prefHeight="700.0" prefWidth="861.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Label layoutX="329.0" layoutY="58.0" style="-fx-background-color: linear-gradient(to top right, #9ced8c, #7bed64); -fx-border-radius: 20px; -fx-border-color: #2bf202;" text="History Page">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </Label>
+                  <TableView fx:id="HistoryPageTable" layoutX="206.0" layoutY="156.0" prefHeight="314.0" prefWidth="460.0">
+                    <columns>
+                      <TableColumn fx:id="HistoryPageTableID" prefWidth="37.0" text="ID" />
+                      <TableColumn fx:id="HistoryPageTableDate" prefWidth="91.0" text="DATE" />
+                        <TableColumn fx:id="HistoryPageTableTime" prefWidth="79.0" text="TIME" />
+                        <TableColumn fx:id="HistoryPageTableSituation" prefWidth="93.0" text="SITUATION" />
+                        <TableColumn fx:id="HistoryPageTableCurrency" prefWidth="90.0" text="CURRENCY" />
+                        <TableColumn fx:id="HistoryPageTableAmount" prefWidth="60.0" text="AMOUNT" />
                     </columns>
                   </TableView>
                </children>
@@ -105,10 +125,9 @@
             </Label>
             <Button fx:id="HomePage" layoutX="18.0" layoutY="273.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="HomePage" />
             <Button fx:id="Exchange" layoutX="18.0" layoutY="303.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="Exchange" />
-            <Button fx:id="Profile" layoutX="18.0" layoutY="395.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="Profile" />
+            <Button fx:id="Profile" layoutX="19.0" layoutY="370.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="Profile" />
             <Button fx:id="Swap" layoutX="18.0" layoutY="335.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="Swap" />
-            <Button fx:id="Token" layoutX="18.0" layoutY="365.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="Token" />
-            <Button fx:id="Transfer" layoutX="18.0" layoutY="425.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="Transfer" />
+            <Button fx:id="Transfer" layoutX="18.0" layoutY="405.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="35.0" prefWidth="150.0" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="Transfer" />
             <Button fx:id="SignOut" layoutX="14.0" layoutY="656.0" mnemonicParsing="false" onAction="#OnSignOutButtonClicked" styleClass="nav-btn" stylesheets="@beautiHomePage.css" text="SIGN OUT" />
          </children>
       </AnchorPane>
@@ -118,7 +137,7 @@
             <Label fx:id="timeLabel" layoutX="123.0" layoutY="12.0" prefHeight="18.0" prefWidth="61.0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="HomePageAnchor" layoutX="186.0" layoutY="40.0" prefHeight="700.0" prefWidth="869.0" visible="false">
+      <AnchorPane fx:id="HomePageAnchor" layoutX="186.0" layoutY="40.0" prefHeight="700.0" prefWidth="869.0">
          <children>
             <TableView fx:id="CoinInfoTable" editable="true" layoutX="167.0" layoutY="205.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="291.0" prefWidth="535.0">
               <columns>
